Fixed C_1 instead of C' in table

--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -496,7 +496,7 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 	\begin{center}\begin{tabular}{c|c|c}
 		Starting state $i$ & Arrival state $j$ & $\lim_{n \to +\infty} P_{ij}^{(n)}$ \\ \hline
 		any & transient & 0 \\
-		recurrent $\notin C_1 ,\: \in C$ & recurrent $\in C$ & 0 \\
+		recurrent $\notin C' ,\: \in C$ & recurrent $\in C$ & 0 \\
 		recurrent $\in C$ & recurrent $\in C$ & $\pi_j = 1 / m_j$ \\
 		transient & recurrent $\in C$ & $\pi_i(C)\cdot\pi_j = \pi_i(C) / m_j$ \\
 	\end{tabular}\end{center}
