Fixed long list of equations that crosses page borders
equation is labeled as "eq:theorem_3.1_first term"

--- a/network_modeling/chapter_2.tex
+++ b/network_modeling/chapter_2.tex
@@ -436,6 +436,10 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 		where path from $i$ to $j$ is splitted in two parts, before and after entering $C$.
 
 		This formula can be written as a limit in $n$ and $C$, expliciting the inner infinite sum over class elements.
+
+		% FORMAT setting
+		\setlength{\mathindent}{-1.5cm} % sporco trucco ingegneristico
+
 		\begin{equation}\begin{split} \label{eq:theorem_3.1_first term}
 			& \forall \epsilon > 0, \exists N \in \mathbb{N} \text{ and a finite class } C' \subseteq C \text{ such that } \\
 			& \forall n \ge N, \left| P_{ij}^{(n)} - \pi_j \left( \sum_{v = 1}^{n} \sum_{k \in C'} \pi_{ik}^{(v)} \right) \right| \stackrel{(1)}{=}
@@ -462,7 +466,11 @@ Let $\rho=\sum\limits_{k=0}^{+\infty} k \cdot a_k$. We say that for
 				\left( \sum_{v = 1}^{n} \sum_{\substack{k \in C \\ k \notin C'}} \pi_{ik}^{(v)}(C) \right) \stackrel{(6)}{\le}
 			\\
 			\le & \left| \sum_{v = 1}^{N} \sum_{k \in C'} \pi_{ik}^{(v)} (P_{kj}^{(n-v)} - \pi_j) \right| + 3 \epsilon \stackrel{(7)}{<} 4 \epsilon
-		\end{split}\end{equation}since $\pi_j = \lim_{n \to +\infty} P_{kj}^{(n-v)}$ by definition, what we have here is a finite sum (over $N$ and $C'$) of infinitesimal quantities
+		\end{split}\end{equation}
+
+		\setlength{\mathindent}{0cm} % reset of "sporco trucco ingegneristico"
+
+		since $\pi_j = \lim_{n \to +\infty} P_{kj}^{(n-v)}$ by definition, what we have here is a finite sum (over $N$ and $C'$) of infinitesimal quantities
 		where
 		\begin{itemize}
 			\item [(1)] using equation \ref{eq:n_step_in_class}, sum is splitted in $k \in C$ into two sums in $k \in C'$ and $k \in C ~ \wedge ~ k \notin C' $
