Continued putting up lecture of 26th Apr 2017. Missing the example, the last sum and the discussion

--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -39,6 +39,10 @@
 % support for glossary and acronyms
 \usepackage[acronym]{glossaries}
 \newacronym[plural=MCs,firstplural=Markov Chains (MCs)]{mc}{MC}{Markov Chain}
+\newacronym[plural=STs,firstplural=Stopping times (STs)]{st}{ST}{Stopping Time}
+\newacronym{kt}{KT}{Karlin-Taylor}
+\newacronym{rv}{r.v.}{random variable (r.v.)}
+\newacronym[plural=PPs,firstplural=Poisson Processes]{pp}{PP}{Poisson Process}
 
 % support for counting
 \newtheorem{theorem}{Theorem}[section]
