--- a/network_modeling/renewalProc.tex
+++ b/network_modeling/renewalProc.tex
@@ -150,7 +150,7 @@ We can conclude
 \end{enumerate}
 
 \textbf{We saw that:}
-$$\exp[a(t-X)]=\inta(t-x)\cdot dF(x)$$
+$$\exp[a(t-X)]=\int a(t-x)\cdot dF(x)$$
 
 We now want to extend it to another monothonic function which is not a probability distribution function.
 
@@ -179,7 +179,7 @@ The starting point is
 \subsection{Renewal Equation}
 
 \begin{equation}
-    A(t) = a(t) + =&\int\limits_0^{t}A(t-x) \cdot dF(x) \quad \text{ in general}
+    A(t) = a(t) +\int\limits_0^{t}A(t-x) \cdot dF(x) \quad \text{ in general}
 \end{equation}
 with $a(t)$ given and $F(x)$ the common distribution. If $a(t)=F(t) \implies$ we have the equation for $M(t)$.
 
@@ -193,11 +193,11 @@ with $a(t)$ given and $F(x)$ the common distribution. If $a(t)=F(t) \implies$ we
 \begin{proof}
   The proof is in three steps: boundary, existence and uniqueness.
   \proofpart
-  \textsc{Boundary}
+  \textsc{Boundary}\label{req:boundary}
   \begin{equation}\begin{split}
     |A(t)| & \le |a(t)| + \int\limits_0^{t}|a(t-x)| \cdot dM(x) \\
-    \sup_{0\le t \le T} |A(t)| & le \sup_{0\le t \le T} |a(t)| + \int\limits_0^{T}\sup_{0\le t \le T}|a(\eta)| \cdot dM(x)  \\
-    & = \sup_{0\le t \le T} |a(t)| \cdot (1+M(T)) < \infty \text{as}
+    \sup_{0\le t \le T} |A(t)| & \le \sup_{0\le t \le T} |a(t)| + \int\limits_0^{T}\sup_{0\le t \le T}|a(\eta)| \cdot dM(x)  \\
+    & = \sup_{0\le t \le T} |a(t)| \cdot (1+M(T)) < \infty \text{ as }
     \begin{cases}
       |a(t)| & \text{bounded for hypothesis} \\
       M(t) < \infty & \text{for } t<\infty
@@ -208,20 +208,76 @@ with $a(t)$ given and $F(x)$ the common distribution. If $a(t)=F(t) \implies$ we
   \textsc{Existence}
     \begin{equation}\begin{split}
       A(t) &= a(t) + M \ast a~(t) = a(t) + \left(\sum\limits_{k=1}^{+\infty} F_k \right) \ast a~(t) \\
-      &= a(t) + F \ast a~(t) \left(\sum\limits_{k=2}^{+\infty} F_k \right) \ast a~(t)
-      \text{\textbf{Reminder:}& but each $F_k \, k>1$ is the convolution with itself k times $F_k = F \ast \F_{k-1}$} \\
-      \implies A(t)&= a(t) + F \ast \left[ a(t) + \left(\sum\limits_{k=1}^{+\infty} F_k \right) \ast a~(t) \right] \\
-      &=a(t) + F \ast A ~ (t) \quad \text{which is one solution}
+      &= a(t) + F \ast a~(t) \left(\sum\limits_{k=2}^{+\infty} F_k \right) \ast a~(t)\\
+      \text{\textbf{Reminder:}}&\text{ but each $F_k \, k>1$ is the convolution with itself k times $F_k = F \ast F_{k-1}$} \\
+      \implies A(t) &= a(t) + F \ast \left[ a(t) + \left(\sum\limits_{k=1}^{+\infty} F_k \right) \ast a~(t) \right] \\
+      &=a(t) + F \ast A ~ (t) \quad \text{ which is one solution.}
     \end{split}\end{equation}
   \proofpart
   \textsc{Uniqueness}
   \begin{equation}\begin{split}
-    A(t) &= a(t) + F \ast A(t) \quad \text{which is a recursive expression.}
+    A(t) &= a(t) + F \ast A(t) \quad \text{which is a recursive expression.} \\
     &= a(t) + F \ast \left[a~(t) + F \ast A~(t) \right] = a(t) + F \ast a ~ (t) + F_2 \ast A~(t) \\
-    &= a(t) + F \ast a ~ (t) + F_2 \ast  \left[a~(t) + F \ast A~(t) \right] = a(t) + F \ast a~(t) + F_2 \ast a~(t) + F_3 \ast A~(t) = \dots \\
+    &= a(t) + F \ast a ~ (t) + F_2 \ast  \left[a~(t) + F \ast A~(t) \right] \\
+    &= a(t) + F \ast a~(t) + F_2 \ast a~(t) + F_3 \ast A~(t) = \dots \\
     &\text{after n steps we obtain} \\
     A(t) &= a(t) + \left( \sum\limits_{k=1}^{n-1}F_k\right) \ast a~(t) + F_n \ast A~(t) \\
     & \sum\limits_{k=1}^{n-1}F_k \xrightarrow{n \to +\infty} M \quad \implies A(t) = a(t) + M \ast a~(t) + \lim_{n \to +\infty} F_n \ast A~(t) \\
-
+    &\text{\textbf{Now}  we need to \textbf{proove} that the limits goes to zero:} \\
+    |F_n \ast A~(t)| &= |\int\limits_0^{t}A(t-\eta) \cdot dF_n(\eta)| \le \int\limits_0^{t}|A(t-\eta)| \cdot dF_n(\eta)  \\
+    & \le \sup\limits_{0 \le \eta \le t} |A(\eta)| \cdot F_n (t) < +\infty \quad \text{ for what we found in \ref{req:boundary}} \\
+    &\implies |F_n \ast A~(t)| \xrightarrow{n \to +\infty} 0 \quad\text{ at least geometrically.}
   \end{split}\end{equation}
 \end{proof}
+
+\textbf{\textsc{Remark:}}
+Let's now focus on the expectation for a \gls{st} and let's proove that for a \gls{pp} it's not true the following:
+\begin{equation}
+  \exp[S_{N(t)+1}] = \exp\left[\sum\limits_{i=1}^{N(t)+1}X_i\right] = \exp[N(t)+1]\cdot \exp[X] \text{  \textbf{but}  } \exp[S_{N(t)}] \neq \exp[N(t)]\cdot \exp[X]
+\end{equation}
+
+\begin{proof}
+  \begin{equation}\begin{split}
+    A(t) &= \exp[S_{N(t)+1}]\\
+    \exp[S_{N(t)+1}|X_1=x] &=
+    \begin{cases}
+      x & x>t \quad \text{no renewal has been seen} \\
+      x + A(t-x) & x \le t \quad \text{\gls{pp} restarts at every renewal}
+    \end{cases} \\
+    A(t) &= \int\limits_0^{+\infty} \exp[S_{N(t)+1}|X_1 = x] \cdot dF(x) \\
+    &= \int\limits_0^{t} [x+ A(t-x)] \cdot dF(x) + \int\limits_t^{+\infty} x \cdot dF(x) \\
+    &= \underbrace{\int\limits_0^{+\infty} x \cdot dF(x)}_{\exp[X_1]} + \int\limits_0^{t} A(t-x) \cdot dF(x) \\
+    &= \exp[X_1] + \int\limits_0^{t} A(t-x) \cdot dF(x)\\
+    & \text{ \textbf{If}}\exp[X_1] < \infty \implies A(t) \text{ is bounded} \\
+    \implies A(t) &= \exp[X_1] + \int\limits_0^{t} \exp[X_1] \cdot dM(x) = \exp[X_1]\cdot [1+M(t)]\\
+  \end{split}\end{equation}1
+\end{proof}
+
+\subsection{Ross p. 104}
+A \gls{rv} N, integer, is called a \gls{st} for the i.i.d. sequence $X_i$ if:
+\begin{equation}
+  \{N=n\} \text{ is independent of }X_i , i > n
+\end{equation}
+
+\subsection{Wald's equation}
+Let $X_1, X_2, \dots, X_N $ be i.i.d,  $\exp[X] < \infty$ and N a \gls{st} s.t. $\exp[N] < \infty$. Then:
+
+\begin{equation}
+  \exp\left[\sum\limits_{n=1}^N X_n \right] = \exp[N] \cdot \exp[X]
+\end{equation}
+\begin{proof}
+  Let $I_n = \begin{cases} 1 & N \ge n \\ 0 & N<n \end{cases}$. Then $\sum\limits_{n=1}^N X_n = \sum\limits_{n=1}^{+\infty} X_n \cdot I_n$
+\begin{equation}\begin{split}
+  \{I_n=1\} &= \{N \ge n \} \text{ event}\\
+  &= \bigcup\limits_{i=1}^{n-1}\{\underbrace{N \neq i}_{\text{depend on } X_1, \dots, X_i} \} \\
+  &\implies \{I_n\} \text{ is independent of }X_n, X_{n+1}, \dots\\
+  \exp\left[\sum\limits_{n=1}^{N}X_n\right] &= \exp\left[\sum\limits_{n=1}^{N}X_n \cdot I_n \right] \stackrel{(1)}{=} \sum\limits_{n=1}^{+\infty}\exp[X_n \cdot I_n] \\
+  &=\sum\limits_{n=1}^{+\infty}\exp[X_n] \cdot \exp[I_n] \stackrel{\text{X i.i.d.}}{=} \exp[X]\cdot\sum\limits_{n=1}^{+\infty}\exp[I_n] \\
+  &= \exp[X] \cdot \sum\limits_{n=1}^{+\infty}\prob[N \ge n] = \exp[X] \cdot \exp[N]
+\end{split}\end{equation}
+\end{proof}
+
+Example:
+\begin{enumerate}
+  \item $\prob[X_i=0]=\prob[X_i = 1] = \frac{1}{2}$ and $N = \min\{n : X_1 + X_2 + \dots + X_N =10\}$
+\end{enumerate}
