First part of SensorNetworks

--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -15,7 +15,6 @@
 \usepackage{amsmath,amssymb,dsfont,bm}
 \usepackage[usenames,dvipsnames,table,tikz]{xcolor} % use colors on table and more
 %\definecolor{DefinedColor}{RGB}{51, 51, 51} % define custom color
-\usepackage{tikz}
 \usepackage{pgfplots}
 \usepackage{listing}
 \usepackage{textgreek}
@@ -100,6 +99,7 @@
 \newacronym[plural=MCs,firstplural=Markov Chains (MCs)]{mc}{MC}{Markov Chain}
 \newacronym{kt}{KT}{Karlin-Taylor}
 \newacronym{pp}{PP}{Poisson Process}
+\newacronym{geraf}{GeRaF}{Geographic Random Forwarding}
 
 \begin{document}
 \frontmatter
@@ -153,5 +153,6 @@
 \input{introduction.tex}
 \input{chapter_2.tex}
 \input{chapter_PP.tex}
+\input{chapter_SN.tex}
 
 \end{document}
